--- a/test/DSL_Tests/DSL_Tests.csproj
+++ b/test/DSL_Tests/DSL_Tests.csproj
@@ -11,13 +11,16 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.6.5" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
-    <PackageReference Include="xunit" Version="2.2.0" />
+    <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\WebSite\webSite.csproj" />
+    <ProjectReference Include="..\U2U.AspNetCore.ScreenPlay\U2U.AspNetCore.ScreenPlay.csproj" />
   </ItemGroup>
+  
+  <!-- FROM: https://github.com/aspnet/Razor/issues/1212 -->
   
   <!--
     Work around https://github.com/NuGet/Home/issues/4412. MVC uses DependencyContext.Load() which looks next to a .dll
