--- a/test/U2U.AspNetCore.ScreenPlay/U2U.AspNetCore.ScreenPlay.csproj
+++ b/test/U2U.AspNetCore.ScreenPlay/U2U.AspNetCore.ScreenPlay.csproj
@@ -5,10 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsQuery" Version="1.3.4" />
     <PackageReference Include="xunit" Version="2.3.1" />
-     <!-- <PackageReference Include="HtmlAgilityPack" Version="1.6.5" /> -->
-     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.1" />
+    <PackageReference Include="AngleSharp" Version="0.9.9" />
   </ItemGroup>
 
 </Project>
