--- a/test/U2U.AspNetCore.ScreenPlay/U2U.AspNetCore.ScreenPlay.csproj
+++ b/test/U2U.AspNetCore.ScreenPlay/U2U.AspNetCore.ScreenPlay.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.1" />
     <PackageReference Include="AngleSharp" Version="0.9.9" />
