--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "taskName": "build",
+      "label": "build",
       "command": "dotnet",
       "type": "process",
       "args": [
@@ -43,5 +43,6 @@
       "problemMatcher": "$msCompile",
       "group": "test"
     }
-  ]
+  ],
+
 }
