Use package U2U.CleanArchitecture from NuGet
Change the package from a project reference to a package reference.
This allows building the project on VSTS, because this package is not part of this source control folder.

--- a/src/Infra/Infra.csproj
+++ b/src/Infra/Infra.csproj
@@ -2,11 +2,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\..\..\CleanArchitecture\NET_CORE_CleanArchitecture\src\U2U.CleanArchitecture\U2U.CleanArchitecture.csproj" />
+    <!-- <ProjectReference Include="..\..\..\CleanArchitecture\NET_CORE_CleanArchitecture\src\U2U.CleanArchitecture\U2U.CleanArchitecture.csproj" /> -->
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
+    <PackageReference Include="U2U.CleanArchitecture" Version="2.0.0-alfa001" />
   </ItemGroup>
 
   <PropertyGroup>
