--- a/src/WebSite/webSite.csproj
+++ b/src/WebSite/webSite.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
+    <PackageReference Include="U2U.CleanArchitecture" Version="2.0.0-alfa001" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
@@ -15,6 +16,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Infra\Infra.csproj" />
-    <ProjectReference Include="..\..\..\CleanArchitecture\NET_CORE_CleanArchitecture\src\U2U.CleanArchitecture\U2U.CleanArchitecture.csproj" />
+    <!-- <ProjectReference Include="..\..\..\CleanArchitecture\NET_CORE_CleanArchitecture\src\U2U.CleanArchitecture\U2U.CleanArchitecture.csproj" /> -->
   </ItemGroup>
 </Project>
