--- a/src/WebSite/webSite.csproj
+++ b/src/WebSite/webSite.csproj
@@ -6,16 +6,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
-    <PackageReference Include="U2U.CleanArchitecture" Version="2.0.0-alfa001" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" />
+    <PackageReference Include="U2U.AspNetCore.CleanArchitecture" Version="2.0.0-alpha" />
   </ItemGroup>
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Infra\Infra.csproj" />
-    <!-- <ProjectReference Include="..\..\..\CleanArchitecture\NET_CORE_CleanArchitecture\src\U2U.CleanArchitecture\U2U.CleanArchitecture.csproj" /> -->
   </ItemGroup>
 </Project>
