--- a/test/U2U.AspNetCore.ScreenPlay/U2U.AspNetCore.ScreenPlay.csproj
+++ b/test/U2U.AspNetCore.ScreenPlay/U2U.AspNetCore.ScreenPlay.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <OutputType>library</OutputType>
+    <VersionPrefix>2.0.0-alpha</VersionPrefix>
+    <NuspecFile>$(MSBuildThisFileDirectory)$(MSBuildProjectName).nuspec</NuspecFile>
   </PropertyGroup>
 
   <ItemGroup>
