--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,42 +4,12 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-  // {
-  //   "name": ".NET Core Launch (web)",
-  //   "type": "coreclr",
-  //   "request": "launch",
-  //   "preLaunchTask": "build",
-  //   "program": "${workspaceRoot}/src/WebSite/bin/Debug/netcoreapp2.0/webSite.dll",
-  //   "args": [],
-  //   "cwd": "${workspaceRoot}/src/WebSite",
-  //   "stopAtEntry": false,
-  //   "launchBrowser": {
-  //     "enabled": true,
-  //     "args": "${auto-detect-url}",
-  //     "windows": {
-  //       "command": "cmd.exe",
-  //       "args": "/C start ${auto-detect-url}"
-  //     },
-  //     "osx": {
-  //       "command": "open"
-  //     },
-  //     "linux": {
-  //       "command": "xdg-open"
-  //     }
-  //   },
-  //   "env": {
-  //     "ASPNETCORE_ENVIRONMENT": "Development"
-  //   },
-  //   "sourceFileMap": {
-  //     "/Views": "${workspaceRoot}/Views"
-  //   }
-  // },
     {
       "name": ".NET Core Launch (web)",
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
-      "program": "${workspaceFolder}/src/WebSite/bin/Debug/netcoreapp2.0/webSite.dll",
+      "program": "${workspaceFolder}/src/WebSite/bin/Debug/netcoreapp2.0/WebSite.dll",
       "args": [],
       "cwd": "${workspaceFolder}/src/WebSite",
       "stopAtEntry": false,
