--- a/test/U2U.AspNetCore.ScreenPlay.Identity/U2U.AspNetCore.ScreenPlay.Identity.csproj
+++ b/test/U2U.AspNetCore.ScreenPlay.Identity/U2U.AspNetCore.ScreenPlay.Identity.csproj
@@ -9,6 +9,11 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="../U2U.AspNetCore.ScreenPlay/U2U.AspNetCore.ScreenPlay.csproj" />
   </ItemGroup>
 
 </Project>
