Add Fake ClaimsPrincipal capability
Almost there...

--- a/test/U2U.AspNetCore.ScreenPlay.Tests/U2U.AspNetCore.ScreenPlay.Tests.csproj
+++ b/test/U2U.AspNetCore.ScreenPlay.Tests/U2U.AspNetCore.ScreenPlay.Tests.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\U2U.AspNetCore.ScreenPlay\U2U.AspNetCore.ScreenPlay.csproj" />
+    <ProjectReference Include="..\U2U.AspNetCore.ScreenPlay.Identity\U2U.AspNetCore.ScreenPlay.Identity.csproj" />
   </ItemGroup>
 
 </Project>
